@startuml PatientService

skinparam classAttributeIconSize 0

package org.springframework.stereotype {
    annotation Service
}

package java.util {
    interface List<T>
    interface Map<K,V>
    class UUID

    UUID .left[hidden].> Service
}

package com.acme.patientenverwaltung {
    package entity {
        class Patient << entity >>

        Patient .up[hidden].> List
    }

    package repository {
        class PatientRepository << control >> << @Repository >>
    }

    package service #DDDDDD {
        class NotFoundException

        class PatientService << control >> << @Service >> {
            + findById(id: UUID): Patient
            + find(queryParams: Map<String, String>): List<Patient>
        }

        PatientService o--> PatientRepository : repo

        PatientService .right.> Patient
        PatientService ..> Service
        PatientService .up.> UUID
        PatientService .up> List
        PatientService .up.> Map

        PatientService ..> NotFoundException
    }
}

hide empty members

footer (c) Jonah Doll, Jürgen Zimmermann

@enduml
